@@ -1,6 +1,8 @@
 trunk (unreleased)
 * blkback: add 'force_close' to more forcibly tear down the device
 * blkback: make 'destroy' idempotent
+* blkback: measure ring utilisation; segments per request; total
+  requests and responses (ok and error)
 
 1.1.0 (30-Jan-2014):
 * blkback: functorise over Activations.
